--- a/app/views/index.html
+++ b/app/views/index.html
@@ -18,18 +18,19 @@
             <li>
                 <a href="/10-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-10-0</a> (in progress)
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
-                    <li><span class="govuk-!-font-weight-bold">funding rules home</span> - added 19/20 preview</li>
-                    <li><span class="govuk-!-font-weight-bold">flow chart</span> - eng/maths updated</li>
-                    <li><span class="govuk-!-font-weight-bold">flow chart</span> - change of circs added</li>
-                    <li><span class="govuk-!-font-weight-bold">glindex</span> - iterations after testing TODO</li>
-                    <li><span class="govuk-!-font-weight-bold">rule range</span> - rule ranges include prefix e.g. '1 to 20' is now 'P1 to P20'</li>
+                    <li><span class="govuk-!-font-weight-bold">funding rules home</span> - 19/20 preview ADDED</li>
+                    <li><span class="govuk-!-font-weight-bold">flow chart</span> - eng/maths UPDATED</li>
+                    <li><span class="govuk-!-font-weight-bold">flow chart</span> - change of circs ADDED</li>
+                    <li><span class="govuk-!-font-weight-bold">flow chart</span> - recognition of prior learning charts (x2) ADDED</li>
+                    <li><span class="govuk-!-font-weight-bold">rule range</span> - now include prefix e.g. '1 to 20' is now 'P1 to P20' - UPDATED</li>
+                    <li><span class="govuk-!-font-weight-bold">glindex</span> - iterations after testing - STILL TODO</li>
                 </ul>
             </li>
             <li>
                 <a href="/9-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-9-0</a> (tested 25/04 - 29/04)
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
                     <li><span class="govuk-!-font-weight-bold">english/maths</span> - original english and maths content from 2018 reinstated (provider)</li>
-                    <li><span class="govuk-!-font-weight-bold">glindex</span> - glindex replaces the glossary section (provider)</li>
+                    <li><span class="govuk-!-font-weight-bold">glindex</span> - glindex replaces the glossary section (provider only)</li>
                     <li><span class="govuk-!-font-weight-bold">survey</span> - additional links added</li>
                     <li><span class="govuk-!-font-weight-bold">flow chart</span> - accessibility issues addressed</li>
                     <li><span class="govuk-!-font-weight-bold">flow chart</span> - PNG option added for flowchart</li>
