--- a/app/views/10-0/manual-setup.html
+++ b/app/views/10-0/manual-setup.html
@@ -65,16 +65,29 @@
 
                 <!-- change of circs flowchart none/svg/text -->
                 <div class="govuk-form-group">
-                        <label class="govuk-label" for="manualSetupChangeCircsChart">
-                            Change of circumstances Flow Chart
-                        </label>
-                        <select class="govuk-select" id="manualSetupChangeCircsChart" name="manualSetupChangeCircsChart" data-option="manualSetupChangeCircsChart">
-                            <option {% if myData.chocChart == 'false' %}selected{% endif %} value="false">None</option>
-                            <option {% if myData.chocChart == 'pngflow' %}selected{% endif %} value="pngflow">Graphical chart (PNG)</option>
-                            <!-- <option {% if myData.emChart == 'svgflow' %}selected{% endif %} value="svgflow">Graphical chart (SVG)</option> -->
-                            <!-- <option {% if myData.emChart == 'textflow' %}selected{% endif %} value="textflow">Text decision tree (if available)</option> -->
-                        </select>
-                    </div>
+                    <label class="govuk-label" for="manualSetupChangeCircsChart">
+                        Change of circumstances Flow Chart
+                    </label>
+                    <select class="govuk-select" id="manualSetupChangeCircsChart" name="manualSetupChangeCircsChart" data-option="manualSetupChangeCircsChart">
+                        <option {% if myData.chocChart == 'false' %}selected{% endif %} value="false">None</option>
+                        <option {% if myData.chocChart == 'pngflow' %}selected{% endif %} value="pngflow">Graphical chart (PNG)</option>
+                        <!-- <option {% if myData.emChart == 'svgflow' %}selected{% endif %} value="svgflow">Graphical chart (SVG)</option> -->
+                        <!-- <option {% if myData.emChart == 'textflow' %}selected{% endif %} value="textflow">Text decision tree (if available)</option> -->
+                    </select>
+                </div>
+
+                <!-- recognition of prior learning flowcharts -->
+                <div class="govuk-form-group">
+                    <label class="govuk-label" for="manualSetupRecCharts">
+                        Recognition of Prior Learning Flow Charts (x2)
+                    </label>
+                    <select class="govuk-select" id="manualSetupRecCharts" name="manualSetupRecCharts" data-option="manualSetupRecCharts">
+                        <option {% if myData.recCharts == 'false' %}selected{% endif %} value="false">None</option>
+                        <option {% if myData.recCharts == 'pngflow' %}selected{% endif %} value="pngflow">Graphical charts (PNGs)</option>
+                        <!-- <option {% if myData.emChart == 'svgflow' %}selected{% endif %} value="svgflow">Graphical chart (SVG)</option> -->
+                        <!-- <option {% if myData.emChart == 'textflow' %}selected{% endif %} value="textflow">Text decision tree (if available)</option> -->
+                    </select>
+                </div>
 
                 <!-- contextual updates filter -->
                 <div class="govuk-form-group">
@@ -138,6 +151,8 @@
             <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 ">
                 <li><a href="/public/images/english-maths-flow-5.png" class="govuk-link govuk-link--no-visited-state">PNG flow chart - English and Maths</a></li>
                 <li><a href="/public/images/change-of-circs-1.png" class="govuk-link govuk-link--no-visited-state">PNG flow chart - Change of circumstances</a></li>
+                <li><a href="/public/images/rec-prior-learning-1-1.png" class="govuk-link govuk-link--no-visited-state">PNG flow chart - Recognition of Prior Learning 1</a></li>
+                <li><a href="/public/images/rec-prior-learning-2-1.png" class="govuk-link govuk-link--no-visited-state">PNG flow chart - Recognition of Prior Learning 2</a></li>
             </ul>
         <!-- </form> -->
     </div>
@@ -178,11 +193,12 @@ $(document).ready(function(){
             _urlupdatesFilter = "&updatesFilter=" + _options.filter("#manualSetupContextualUpdates").val(),
             _urlemChart = "&emChart=" + _options.filter("#manualSetupEngMathsChart").val(),
             _urlchocChart = "&chocChart=" + _options.filter("#manualSetupChangeCircsChart").val(),
+            _urlrecCharts = "&recCharts=" + _options.filter("#manualSetupRecCharts").val(),
             _urlpreview = "&preview=" + _options.filter("#manualPreview").val(),
             _urlheader = "&header=" + _options.filter("#manualSetupHeader").val(),
             _urlupdatesChapter = "&updatesChapter=" + _options.filter("#manualUpdatesChapter").val(),
             _urlReset = "&resetSession=true",
-            _urlPageQueries = _urlPage + _urlstartFrom + _urlmanual + _urlupdatesFilter + _urlemChart + _urlchocChart + _urlpreview + _urlheader + _urlupdatesChapter + _urlReset;
+            _urlPageQueries = _urlPage + _urlstartFrom + _urlmanual + _urlupdatesFilter + _urlemChart + _urlchocChart + _urlrecCharts + _urlpreview + _urlheader + _urlupdatesChapter + _urlReset;
 
         var _startURLText = _urlVersion + _urlPageQueries,
             _startURLHREF =  _urlPageQueries;
