--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,7 +16,7 @@
         <h2 class="govuk-heading-m">UI Versions</h2>
         <ul class="govuk-list govuk-list--bullet govuk-!-font-size-24">
             <li>
-                <a href="/10-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-10-0</a> (in progress)
+                <a href="/10-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-10-0</a> (tested 17/05, 21/05 and ???)
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
                     <li><span class="govuk-!-font-weight-bold">funding rules home</span> - 19/20 preview ADDED</li>
                     <li><span class="govuk-!-font-weight-bold">flow chart</span> - eng/maths UPDATED</li>
