--- a/app/views/10-0/manual-glindex.html
+++ b/app/views/10-0/manual-glindex.html
@@ -88,13 +88,13 @@
 
                                         {% if part.type == "see" %}
                                             <!-- See -->
-                                            <h3 class="govuk-heading-s" class="govuk-body" id="{{_title | replace(' ', '-') | replace('(', '-') | replace(')', '-')}}">
+                                            <p class="govuk-body govuk-!-font-weight-bold" id="{{_title | replace(' ', '-') | replace('(', '-') | replace(')', '-')}}">
                                                 {{_title}} <span class="govuk-!-font-weight-regular">see {% for _see in part.see %}{% if part.see.length > 1 and loop.first == false %}{% if loop.last %} or {% else %}, {% endif %}{% endif %}<span>{{_see|safe}}</span>{% endfor %}</span>
-                                            </h3>
+                                            </p>
                                         {% else %}
 
                                             <!-- Title -->
-                                            <h3 class="govuk-heading-s" class="govuk-body" id="{{_title | replace(' ', '-') | replace('(', '-') | replace(')', '-')}}">{{_title}}</h3>
+                                            <p class="govuk-body govuk-!-font-weight-bold" id="{{_title | replace(' ', '-') | replace('(', '-') | replace(')', '-')}}">{{_title}}</p>
 
                                             <!-- Definition -->
                                             <p class="govuk-body">{{part.content|safe|trim}}</p>
@@ -110,45 +110,37 @@
                                                     <p class="govuk-body">{{_item|safe|trim}}</p>
                                                     {% endif %}
                                                 {% endfor %}
-
                                                     {% if _subpart.type == "list" %}
                                                     </ul>
                                                     {% endif %}
                                                 {% endfor %}
                                             {% endif %}
 
-                                            <!-- Cross refs (code all on 1 line otherwise a space will be rendered before the comma) -->
+                                            <!-- Cross refs -->
                                             {% if part.crossrefs2 %}
                                                 {% set _singleCrossRef = part.crossrefs2.length == 1 %}
-                                            
                                                 {% if _singleCrossRef == true %}
-                                                    <p class="govuk-body">Read more about {{_title}} at 
+                                                    <p class="govuk-body">View the 
                                                 {% else %}
-                                                    <p class="govuk-body">Read more about {{_title}}:</p><ul class='govuk-list govuk-list--bullet'>
+                                                    <p class="govuk-body">View the following sections of the funding rules:</p><ul class='govuk-list govuk-list--bullet'>
                                                 {% endif %}
-                                                
                                                 {% for _crossref in part.crossrefs2 %}
-                                                
                                                     {% set _loopIsFirst = loop.first %}{% set _crossrefText = '' %}{% set _crossrefLink = '' %}{% if _crossref.type == "subsection" %}{% for section in _thisManual.sections %}{% if section.id == _crossref.sectionid %}{% set _rules = "" %}{% if _crossref.rules %}{% for rule in _crossref.rules %}{% if _crossref.rules.length > 1 and loop.first == false %}{% if loop.last %}{% set _rules = _rules + " and " %}{% else %}{% set _rules = _rules + ", " %}{% endif %}{% endif %}{% set _rules = _rules + _rulePrefix + rule %}{% endfor %}{% set _rules = ' (' + _rules + ')' %}{% endif %}{% set _subsectionTitle = section.title %}{% set _subsectionid = _crossref.sectionid + "-subsection" %}{% for subsection in section.subsections %}{% if subsection.id == _crossref.subsectionid %}{% set _subsectionTitle = subsection.title %}{% set _subsectionid = _crossref.subsectionid %}{% endif %}{% endfor %}{% set _crossrefText = _subsectionTitle %}{% set _crossrefLink = 'manual-page?manual=' + myData.manual + '&manualpage=' + _crossref.sectionid + '&updatesFilterOn=false#' + _subsectionid %}{% endif %}{% endfor %}{% elif _crossref.type == "section" %}{% for section in _thisManual.sections %}{% if section.id == _crossref.sectionid %}{% set _sectionTitle = section.title %}{% set _crossrefText = _sectionTitle %}{% if section.rangeObj %}{% set _crossrefText = _sectionTitle + ' (' + _rulePrefix + section.rangeObj.start + ' to ' + _rulePrefix + section.rangeObj.end + ')' %}{% endif %}{% endif %}{% endfor %}{% set _crossrefLink = 'manual-page?manual=' + myData.manual + '&manualpage=' + _crossref.sectionid + '&updatesFilterOn=false' %}{% elif _crossref.type == "rulerange" %}{% set _crossrefText = _rulePrefix + _crossref.range.start + ' to ' + _rulePrefix + _crossref.range.end %}{% set _crossrefLink = 'manual-page?manual=' + myData.manual + '&manualpage=' + _crossref.sectionid + '&updatesFilterOn=false#' + _crossref.range.start|replace('.', '-') %}{% endif %}
-                                                
                                                     {% if _singleCrossRef == true %}
-                                                    <a href="{{_crossrefLink}}" class="govuk-link govuk-link--no-visited-state">{{_crossrefText}}</a>.</p>
+                                                    <a href="{{_crossrefLink}}" class="govuk-link govuk-link--no-visited-state">{{_crossrefText}}</a> section of the funding rules.</p>
                                                     {% else %}
                                                     <li><a href="{{_crossrefLink}}" class="govuk-link govuk-link--no-visited-state">{{_crossrefText}}</a></li>
                                                     {% endif %}
-                                                    
                                                 {% endfor %}
-
                                                 {% if _singleCrossRef != true %}
                                                     </ul>
                                                 {% endif %}
-                                            
                                             {% endif %}
                                             <!-- Cross refs END -->
 
                                            <!-- See also -->
                                            {% if part.seealso %}
-                                                <p class="govuk-body"><span>See also </span> {% for _seealso in part.seealso %}{% if part.seealso.length > 1 and loop.first == false %}{% if loop.last %} and {% else %}, {% endif %}{% endif %}<span>{{_seealso|safe}}</span>{% endfor %}</p>
+                                                <p class="govuk-body"><span>See also, the term{% if part.seealso.length > 1 %}s{% endif %} </span>{% for _seealso in part.seealso %}{% if part.seealso.length > 1 and loop.first == false %}{% if loop.last %} and {% else %}, {% endif %}{% endif %}<span>{{_seealso|safe}}</span>{% endfor %}</p>
                                            {% endif %}
 
                                         {% endif %}
