--- a/app/views/10-0/manual-page.html
+++ b/app/views/10-0/manual-page.html
@@ -351,9 +351,13 @@
                                                 {% endif %}
                                             <!-- recognition of prior learning flowcharts -->
                                             {% elif subsection.id == "accounting-prior-learning" %}
-                                                {% if myData.recCharts == "pngflow" %}
+                                                {% if myData.recCharts == "pngflow" or myData.recCharts == "pngflow2" %}
                                                     <img class="flow-chart" style="width: auto; height: auto; max-width: 100%; margin-bottom: 70px" alt=”” aria-hidden=”true” src="/public/images/rec-prior-learning-1-1.png">
+                                                    {% if myData.recCharts == "pngflow" %}
                                                     <img class="flow-chart" style="width: auto; height: auto; max-width: 100%; margin-bottom: 30px" alt=”” aria-hidden=”true” src="/public/images/rec-prior-learning-2-1.png">
+                                                    {% else %}
+                                                    <img class="flow-chart" style="width: auto; height: auto; max-width: 100%; margin-bottom: 30px" alt=”” aria-hidden=”true” src="/public/images/rec-prior-learning-2-2.png">
+                                                    {% endif %}
                                                 {% endif %}
                                             {% endif %}
                                         {% elif part.type == "block" %}
