--- a/app/views/index.html
+++ b/app/views/index.html
@@ -24,7 +24,7 @@
                     <li><span class="govuk-!-font-weight-bold">flow chart</span> - recognition of prior learning charts (x2) ADDED</li>
                     <li><span class="govuk-!-font-weight-bold">flow chart</span> - second recognition of prior learning chart - v2 ADDED</li>
                     <li><span class="govuk-!-font-weight-bold">rule range</span> - now include prefix e.g. '1 to 20' is now 'P1 to P20' - UPDATED</li>
-                    <li><span class="govuk-!-font-weight-bold">glindex</span> - cross refs targets, layout and text. links removed from 'see' and 'see also' terms.</li>
+                    <li><span class="govuk-!-font-weight-bold">glindex</span> - chapter name/summary and link moved to top of the list. cross refs targets, layout and text. links removed from 'see' and 'see also' terms.</li>
                 </ul>
             </li>
             <li>
