added flow charts to pdfs

--- a/app/views/10-0/rules-years.html
+++ b/app/views/10-0/rules-years.html
@@ -339,19 +339,19 @@
 <ul>
   <li>
     <p><span id="attachment_3280308" class="attachment-inline">
-<a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/786464/apprenticeship_funding_rules_and_guidance_for_employers_August_2018_to_July_2019_version_2.pdf">employers</a>
+<a href="/public/downloads/apprenticeship_funding_rules_and_guidance_for_employers_August_2018_to_July_2019_version_2.pdf">employers</a>
 (<span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">836KB</span>, <span class="page-length">59 pages</span>)
 </span></p>
   </li>
   <li>
     <p><span id="attachment_3280309" class="attachment-inline">
-<a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/786462/apprenticeship_funding_rules_for_employer-providers_August_2018_to_July_2019_version_2.pdf">employer-providers</a>
+<a href="/public/downloads/apprenticeship_funding_rules_for_employer-providers_August_2018_to_July_2019_version_2.pdf">employer-providers</a>
 (<span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">911KB</span>, <span class="page-length">69 pages</span>)
 </span></p>
   </li>
   <li>
     <p><span id="attachment_3280310" class="attachment-inline">
-<a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/786465/apprenticeship_funding_rules_for_training_providers_August_2018_to_July_2019_version_2.pdf">training providers</a>
+<a href="/public/downloads/apprenticeship_funding_rules_for_training_providers_August_2018_to_July_2019_version_2.pdf">training providers</a>
 (<span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">976KB</span>, <span class="page-length">76 pages</span>)
 </span></p>
   </li>
