--- a/app/views/10-0/rules-years.html
+++ b/app/views/10-0/rules-years.html
@@ -467,7 +467,7 @@
 
   <p>You can also view <span class="attachment-inline">
       <a href="/Public/downloads/preview-apprenticeship-funding-rules-2019-2020-summary-of-changes.pdf">apprenticeship funding rules 2019 to 2020: summary of changes</a>
-      (<span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">95KB</span>, <span class="page-length">4 pages</span>)
+      (<span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">95KB</span>, <span class="page-length">4 pages</span>).
       </span></p>
 
 
