--- a/app/views/index.html
+++ b/app/views/index.html
@@ -18,11 +18,13 @@
             <li>
                 <a href="/10-0/manual-setup" class="govuk-link govuk-link--no-visited-state">V-10-0</a> (tested 17/05, 21/05 and ???)
                 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19">
-                    <li><span class="govuk-!-font-weight-bold">funding rules home</span> - 19/20 preview ADDED</li>
+                    <li><span class="govuk-!-font-weight-bold">19/20 preview</span> - section added to funding rules home</li>
+                    <li><span class="govuk-!-font-weight-bold">19/20 preview</span> - example PDFs added</li>
                     <li><span class="govuk-!-font-weight-bold">flow chart</span> - eng/maths UPDATED</li>
                     <li><span class="govuk-!-font-weight-bold">flow chart</span> - change of circs ADDED</li>
                     <li><span class="govuk-!-font-weight-bold">flow chart</span> - recognition of prior learning charts (x2) ADDED</li>
                     <li><span class="govuk-!-font-weight-bold">flow chart</span> - second recognition of prior learning chart - v2 ADDED</li>
+                    <li><span class="govuk-!-font-weight-bold">flow charts in PDF</span> - 18/19 and 19/20 preview pdfs contain flowcharts</li>
                     <li><span class="govuk-!-font-weight-bold">rule range</span> - now include prefix e.g. '1 to 20' is now 'P1 to P20' - UPDATED</li>
                     <li><span class="govuk-!-font-weight-bold">glindex</span> - chapter name/summary and link moved to top of the list. cross refs targets, layout and text. links removed from 'see' and 'see also' terms.</li>
                 </ul>
